updated at: 2023-04-25 20:43, 巨大剣 - ニッケルちゃんマート - BOOTH

--- a/VRChat/21/973121.html
+++ b/VRChat/21/973121.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ZgOxn2yqbllBguQa3mO8DCEaA/L7nDuJig8/ghnM+6Y="></script>
+    "F49dgGmPKg9nmHuQ+bD2beDlP+4uTQaiGZCiU0OAr84="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"巨大剣","description":"VRChatでの使用を想定した3Dモデルです。\nワールドへの設置、使用を想定していますが、原則使用にあたっての制限はございません。\n低ポリゴンですのでアバターへの装備にも適しています。\n\nテクスチャも含め改変も自由ですが、再配布・二次配布・転売等はご遠慮ください。\n\n【情報】\n△210ポリゴン、テクスチャ3枚（アルベド・メタリック・ノーマル）","url":"https://booth.pm/ja/items/973121","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/33f35c4a-fc58-4353-abe5-4faca5e412cb/i/973121/448f77ec-5d81-488e-b04b-efd2f56e3174_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZgOxn2yqbllBguQa3mO8DCEaA/L7nDuJig8/ghnM+6Y="></script>
+    nonce="F49dgGmPKg9nmHuQ+bD2beDlP+4uTQaiGZCiU0OAr84="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -173,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/973121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -188,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/973121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
