updated at: 2023-04-25 20:43, 板ポリ歯車4種 Blenderファイル付属 - 満天星躑躅だよ - BOOTH

--- a/VRChat/62/931562.html
+++ b/VRChat/62/931562.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8zq//2iYu4c8pjeUHIBXPVoZxpFh2hOeJF7Fw+senYo="></script>
+    "O8rrK+FsAXj0jIitZ4F03bogzBVQWcCAeisFEiAhF9E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"板ポリ歯車4種 Blenderファイル付属","description":"1種あたり2ポリゴンの歯車セットです。\n各種メカ機構やスチームパンクのお供に、モデル製作用の素材としてどうぞ。\n小物のアクセントに使うもよし、回すもよし散りばめるもよしです。\n\n・FBXファイルの他にBlenderファイルを同梱しています。\n・テクスチャとしてUnityStandardシェーダー用の各種マップの他、シェイプのAIファイル、アルファマップを同梱しています。\n・unitypackage内に設定済みのマテリアル、プレハブがあります。\n\n・CC0で公開します。営利利用、改変、再配布可能です。","url":"https://booth.pm/ja/items/931562","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/931562/bf7769e6-8a31-4883-8279-d168e0ff2220_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8zq//2iYu4c8pjeUHIBXPVoZxpFh2hOeJF7Fw+senYo="></script>
+    nonce="O8rrK+FsAXj0jIitZ4F03bogzBVQWcCAeisFEiAhF9E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/931562/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               332
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/931562/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               332
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
