--- a/VRChat/71/972771.html
+++ b/VRChat/71/972771.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mRoGowuqxc91bqVjpKzJL8Vqo2kIyTMefEYTbKROBWo="></script>
+    "2pcD9LN0B6Db3+QzYTScLc8C3HVS9tXaYUiNJ2Vuiu4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カラーコーン","description":"【説明文】\nVRChatでの利用を目的として生み出された3Dモデル。\nカラーコーンのようなもの。\n\nコーン：△ポリゴン数　778\nカバー：△ポリゴン数　184\n\n【付属品】\nunitypackageデータ\nfbxデータ\ntextureデータ\n\n【利用規約】\nご自由にどうぞ。\n\n【免責事項】\nこのデータを使用して発生したいかなる問題、損害にも当方は責任を持ちません。\nご使用は自己責任でお願いします。\n","url":"https://booth.pm/ja/items/972771","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fceb67cb-cfe3-44f3-9d8b-1d494d77a478/i/972771/fb869416-2578-4db4-a76e-4cc05a8a599f_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mRoGowuqxc91bqVjpKzJL8Vqo2kIyTMefEYTbKROBWo="></script>
+    nonce="2pcD9LN0B6Db3+QzYTScLc8C3HVS9tXaYUiNJ2Vuiu4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,7 +154,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/972771/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
@@ -167,14 +169,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/972771/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
