--- a/VRChat/08/972708.html
+++ b/VRChat/08/972708.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gjXKBtvKDACSuk7SWmKrwDT233WVdz6G7okx+1bMSwQ="></script>
+    "Q780e7c7S6AwyAagnWtW6Vg1OasTpmFh4b2zOSwKnG0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クロックソード","description":"時計の針をモチーフにした、フルスクラッチの剣「クロックソード」です\n\nポリゴン数　\nロングハンドソード(長い方)\t932△\nショートハンドソード(短い方)\t940△\nVRChatでの使用を想定しています","url":"https://booth.pm/ja/items/972708","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/972708/142f824a-b1a9-4430-96dd-d3dac1448ec2_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gjXKBtvKDACSuk7SWmKrwDT233WVdz6G7okx+1bMSwQ="></script>
+    nonce="Q780e7c7S6AwyAagnWtW6Vg1OasTpmFh4b2zOSwKnG0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/972708/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/972708/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
