--- a/VRChat/42/971442.html
+++ b/VRChat/42/971442.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "b6RiQIy7QUhEjGQ1fRXeoidCp/be3jbxEExyjK22AoQ="></script>
+    "M0JFnw2Ef5Kqh0c9GzQxLFMmXUJeaUMJHaTMpQv717I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"タワーシールド","description":"フルスクラッチモデルのタワーシールドです\nポリゴン数　1018△\nVRChatでの使用を想定しています","url":"https://booth.pm/ja/items/971442","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/971442/338044b3-63b9-4bbe-9da0-60357c630795_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b6RiQIy7QUhEjGQ1fRXeoidCp/be3jbxEExyjK22AoQ="></script>
+    nonce="M0JFnw2Ef5Kqh0c9GzQxLFMmXUJeaUMJHaTMpQv717I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/971442/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/971442/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
