updated at: 2023-04-25 20:45, Anvil（金床） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/48/967948.html
+++ b/VRChat/48/967948.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "70VqWtLD1t4AdzdyqsSu7tSzy8hmM7IAbzKHU5V68Rg="></script>
+    "aL+XtJXCgcgj2O55mQPwZnX/UkK9G9KHyA7VVPFOFHc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Anvil（金床）","description":"8/26 バーチャルマーケット用に制作した鍛冶屋のための金床です。\nSketchfabで3Dデータの閲覧ができます。\n\nポリゴン数　△1146\nテクスチャ　2048*2048 3枚\n\nUnityパッケージを同梱しているのですぐに使い始めることができます。\n\n※ブースで展示したものは元サイズを1.5倍しています　シチュエーションに合わせてスケールは調整して下さい","url":"https://booth.pm/ja/items/967948","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/967948/b2b1b8f3-27c5-4ece-aa72-18af0a33d5ff_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="70VqWtLD1t4AdzdyqsSu7tSzy8hmM7IAbzKHU5V68Rg="></script>
+    nonce="aL+XtJXCgcgj2O55mQPwZnX/UkK9G9KHyA7VVPFOFHc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967948/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967948/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
