updated at: 2023-04-25 20:45, VIVEBatteryInfo Ver. 0.2.0.14 - クレウスのショップ - BOOTH

--- a/VRChat/09/969809.html
+++ b/VRChat/09/969809.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UWX6TlkwR2zCy6Zi8Ngw+7YUhos5H7Q1Qhija/3GXGc="></script>
+    "awoxza8D7f2+oYLia0g9GCiCjPLSspPnsSr10EkiLIo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VIVEBatteryInfo Ver. 0.2.0.14","description":"※直近の最新版は、βテストも兼ね、FANBOXにて先行リリースしています。\nhttps://www.pixiv.net/fanbox/creator/1400148\n\n本ページにてBoost購入いただいた方へ最新版のキーをお送りしているので、購入ページよりお問い合わせください。\n\n※最新版で動作が不安定・起動しない方は、旧バージョンをご利用ください。\n\nSteamVRダッシュボードのタブに「BattInfo」を追加するアプリです。\nVIVEコントローラとトラッカーのバッテリー状態を表示できます。\nまた、現在時刻とCPU使用率も表示できます。\n腕時計のように左手の甲に表示させておくことも出来ます。\n\nその他さまざまな付加機能があります。\n\nfor English:\nApplication can use english and any languages.\nyou can download to \"無料ダウンロード\" button.\nLicense are \"CC BY-NC-SA 4.0\". thank you!","url":"https://booth.pm/ja/items/969809","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/cc94a38f-816e-407f-86e5-13bc78cd95c6/i/969809/305b8ffb-1d46-4cbc-a004-a5a3fe61fdcf_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UWX6TlkwR2zCy6Zi8Ngw+7YUhos5H7Q1Qhija/3GXGc="></script>
+    nonce="awoxza8D7f2+oYLia0g9GCiCjPLSspPnsSr10EkiLIo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/969809/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1229
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/969809/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1229
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
