--- a/VRChat/63/969163.html
+++ b/VRChat/63/969163.html
@@ -70,9 +70,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6J/dOaYTU2N+ptDYcHjt3kp9lSopDgFLkm2AUqBKeAs="></script>
+    "+6id3JVJqFUJvHIyGzTB331CNQ0h80uW91FwCv5J/YE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チョコバナナ","description":"チョコバナナ","url":"https://booth.pm/ja/items/969163","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/969163/2fc65c35-b284-4e81-b732-0162b9fea7d1_base_resized.jpg"}
     </script>
@@ -86,7 +86,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6J/dOaYTU2N+ptDYcHjt3kp9lSopDgFLkm2AUqBKeAs="></script>
+    nonce="+6id3JVJqFUJvHIyGzTB331CNQ0h80uW91FwCv5J/YE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -110,6 +110,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/969163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/969163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
