--- a/VRChat/70/968870.html
+++ b/VRChat/70/968870.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FIOnqTX//Oirc9qTvPR5qgJFuEmzy87erW9RKJNYxlw="></script>
+    "xTmh/Nkk695fL6JRfub+XCVcnUlbCm/iT0wDaQXsoYc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【個人商用ライセンス版】川原えむ メイド服01","description":"利用規約にご同意いただける方のみご購入ください。\nまた、日本語以外でのご質問にはお答えしかねます。ご了承ください。\n\nこのキャラクターはフィクションです。実在の人物や団体などとは関係ありません。\nまた、キャラクターの設定を推奨・強制するものではありません。\n\n日本国外のサイトで販売されているものは非正規品です。\nマルウェアが含まれる可能性があるので購入しないでください。\nThose sold at sites outside of Japan are non-genuine.\nDo not purchase as it may contain malware.\n在日本以外的地方销售的产品是非正品的。\n不要购买，因为它可能包含恶意软件。\n일본 외 사이트에서 판매/배포되는 것은 정품이 아닙니다. 랜섬웨어 혹은 멀웨어 등의 악성 코드가 포함되어 있을 수 있으므로 구입하지 마세요.","url":"https://booth.pm/ja/items/968870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/968870/51adc43b-6be6-4caa-a47e-5f10cce58a76_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FIOnqTX//Oirc9qTvPR5qgJFuEmzy87erW9RKJNYxlw="></script>
+    nonce="xTmh/Nkk695fL6JRfub+XCVcnUlbCm/iT0wDaQXsoYc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/968870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               352
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/968870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               352
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
