--- a/VRChat/23/968523.html
+++ b/VRChat/23/968523.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BpyXN+/nKV70yDUEfkVxKbsHfSgbUTV1F0txJci1ZQs="></script>
+    "5PPiH7Etj/gcBLOZXciBSnWs7LJmbxFC+VrDKOBguGk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"マンボウくん","description":"・イラストタッチのかわいらしいマンボウモデルです。\n・第三者の収益化動画や配信などに映り込む際の制限などはありません。\n・ハイポリ、ローボリの２バージョンのFBXファイルとテクスチャファイル、UnityPackageにはマテリアルを設定したマンボウモデルとVRChatSDKがインポートされた\nプロジェクトファイルにインポートするとそのままアップロード可能状態なセットアッププレハブ付き。","url":"https://booth.pm/ja/items/968523","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4cfe502f-f7f0-4110-8040-11bd7e240c28/i/968523/560cef5b-a0c2-48db-880e-a69f4593c095_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BpyXN+/nKV70yDUEfkVxKbsHfSgbUTV1F0txJci1ZQs="></script>
+    nonce="5PPiH7Etj/gcBLOZXciBSnWs7LJmbxFC+VrDKOBguGk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/968523/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/968523/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
