--- a/VRChat/21/958921.html
+++ b/VRChat/21/958921.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6YinvaTX87Z+VvGeGm1mSUMEPdpeZXMeCNd/LWRuBNU="></script>
+    "yPa3ag+Lmlt8Ff72ffullhJykUj6AYT5+qTY/nyBUU4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"へなちょこ魔法使いカルミア","description":"【へなちょこ魔法使いカルミアモデル紹介】\n\nこのモデルはVRアバター向けモデルとなります。\nフルトラッキングは未対応です。\n本モデルはCubeds Unity Shadersを使用しております。\nCubeds Unity Shaders\nhttps://github.com/cubedparadox/Cubeds-Unity-Shaders\n\nポリゴン数：8504\nテクスチャ数：4（エミッション用テクスチャ2枚）\nマテリアル数：5\n\n【内容】\n・3Dモデル（FBX、テクスチャ）\nシェイプキーは真顔、笑顔、へなちょこ顔、半目、ビックリ、瞬き、ニヤケ顔の7種類。\nリップシンクはあ、い、う、え、お、口閉じの6種類が入っています。\n\n・UnityPackage\nHumanoid設定済みモデルとSceneが入っていますがShaderが同封されていないので各自でShaderを設定してください。\n顔のマテリアルのShadowは0にしないと変な影が出ます。\n\n・UVマップ\n肌を青肌にする等の改変を行う際に使用してください。\n\n【利用規約】\n・本モデルは営利、非営利問わずVRChat又はそれ以外のコンテンツに使用することを許諾します。\n・3Dモデル、テクスチャの著作権は増田弾正に帰属します。\n・3Dモデル等を改変し使用することを許諾します。\n・3Dモデル、テクスチャを営利、非営利問わず許可無く再配布することを禁止します。（VRChatでのアバターワールドに配置等も含む）\n・3Dモデルをヘイトスピーチや他者への嫌がらせ等での使用を禁止します。\n・3Dモデルを使用したことにより発生したトラブル、損失等の責任は一切負いません。\n","url":"https://booth.pm/ja/items/958921","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/958921/93f6a98d-be09-4c16-a89c-4180419d6c95_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6YinvaTX87Z+VvGeGm1mSUMEPdpeZXMeCNd/LWRuBNU="></script>
+    nonce="yPa3ag+Lmlt8Ff72ffullhJykUj6AYT5+qTY/nyBUU4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/958921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/958921/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
