--- a/VRChat/68/967968.html
+++ b/VRChat/68/967968.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UlsPlXz/LbZhxvxWPkmuPJe0Xb3usMz9sswz+TihLZM="></script>
+    "gkdIBK/F4dsAUNGUGGmbwfZvN2GmyNXLWmTFqGT3P3Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"誰でももふもふけもみみセット","description":"頭にセットしてあなたもけもみみになりましょう！\n\n△1100\nテクスチャあります\nFBX形式\n\n利用規約\n・個人、商用利用自由\n・改変自由\n・VRChat内の配布可\n\n・製作の主張はおやめ下さい","url":"https://booth.pm/ja/items/967968","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c5e6e4cc-9624-4b41-a3b8-698fa7fe387b/i/967968/e4abaeef-1375-44fb-ba52-bb5609160741_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UlsPlXz/LbZhxvxWPkmuPJe0Xb3usMz9sswz+TihLZM="></script>
+    nonce="gkdIBK/F4dsAUNGUGGmbwfZvN2GmyNXLWmTFqGT3P3Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967968/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               379
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967968/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               379
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
