updated at: 2023-04-25 20:46, 狐面(白) - 狐のお面屋さん - BOOTH

--- a/VRChat/88/967788.html
+++ b/VRChat/88/967788.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NMyuBnmsSOxIIXOExYje6Be1u6vHoSgVrHOpa4TVZfE="></script>
+    "f3zRDxPOVb22TpXE+OGiveSM2e/b9PsyFEANRJyTwjc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"狐面(白)","description":"狐面スタンダード \nver １\nﾎﾟﾘｺﾞﾝ数1330\n\n狐面スタンダード２\nver 2\nﾎﾟﾘｺﾞﾝ数970\n\n\n内容物\n１．お面のBlenderファイル\n２．お面のFBXファイル\n３．お面のOBJファイル\n４．お面のテクスチャとなるPNGファイル\n５．お面のSculptris用ファイル\n６．readme\n\n\n狐のお面の3Dデータです、至らない点等が\nあるかもしれませんが、ご了承いただける方だけご購入ください。購入後の苦情は受け付けかねます。\n※本作品はSuclptrisを仕様して作成しています。\n※特にボーン等は入っておりません\n\n改変は自由です。\n商用利用、再販、改変後の販売は不可とします。\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n詳しくは、内容物のreadmeを確認ください。\n\n本データの著作権は作成者の狐が有します。","url":"https://booth.pm/ja/items/967788","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/50dd0ee9-b096-417f-bb42-d66b91a07be1/i/967788/f41193e6-03bb-4559-985e-7a59336cc615_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NMyuBnmsSOxIIXOExYje6Be1u6vHoSgVrHOpa4TVZfE="></script>
+    nonce="f3zRDxPOVb22TpXE+OGiveSM2e/b9PsyFEANRJyTwjc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967788/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967788/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
