updated at: 2023-04-25 20:46, 時計 - Masquerade Members Shop - BOOTH

--- a/VRChat/57/967757.html
+++ b/VRChat/57/967757.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V52t9muJRa8yjjuo9gsGuF6y0YL8HMhXhWeOd226MwQ="></script>
+    "IVLsnApGDvTLa4eSR3FvAKPdCuzVLEtCiE7mX+vxyF4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"時計","description":"時計です\n内容\n　unitypackage\n　\nモデル詳細\n　ポリゴン数1792\n　マテリアル１\n　テクスチャ１\n\n商用利用ok\n再配布禁止\n\n02/10修正箇所\n・テクスチャ書き直し\n・マテリアル1つに統合\n・Post-ProcessingProfile　追加\n\n","url":"https://booth.pm/ja/items/967757","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e0415562-fcb7-4594-a7f1-147b54a5ca15/i/967757/6a9d8c0f-ef82-4d17-a745-f2d4bc8f50cf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V52t9muJRa8yjjuo9gsGuF6y0YL8HMhXhWeOd226MwQ="></script>
+    nonce="IVLsnApGDvTLa4eSR3FvAKPdCuzVLEtCiE7mX+vxyF4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               240
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               240
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
