--- a/VRChat/23/967423.html
+++ b/VRChat/23/967423.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LGT4ZBorzv8sS9ettQLvfQlIh+DVLtEdM1W8T7JhLTo="></script>
+    "NvDDCpqkL06lzoIMjwr9/JVUBtNv2Vf2N0xh7xfY2AA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Saikin Hutotta(Rebound)","description":"8/26　バグが潰せず無念のダウングレード（足や腕などの長さを弄る機能が現状正常に動作しないのでオフに）\n8/21　Rebound版にアップデート\n\nUnityでHumanoid対応モデルに追加する事で体型をスライダーで変更する事ができます。\nVRchatにアップロードする際は本コンポーネントを削除してください。（スクリプトは弾かれるため）\n詳しい使用法は同梱されたヘルプファイルを参照してください。\n\n\n・sentz-Aデータ利用規約（2018/08/26）\n本データを利用した場合、利用者は本規約に同意したものとみなされます。\n本データの利用により発生した損害、損失等について著作者は一切の責任を負わないものとします。\n1.著作者の特別の許可がない限り、不特定多数が現状のまま利用可能な状態での再配布を禁じます。","url":"https://booth.pm/ja/items/967423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e187f0d4-84c9-40b6-8fed-dae784ce6815/i/967423/6942f9c5-b6de-402f-b417-10d9f4eff9a7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LGT4ZBorzv8sS9ettQLvfQlIh+DVLtEdM1W8T7JhLTo="></script>
+    nonce="NvDDCpqkL06lzoIMjwr9/JVUBtNv2Vf2N0xh7xfY2AA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               315
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
