updated at: 2023-04-25 20:47, Buckler（小型円盾） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/79/967079.html
+++ b/VRChat/79/967079.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3Z6GlgRjB4w2H7iZB8dIU7kPYhbIPFN7+V1yl5ssJfA="></script>
+    "EP7ERzc694+ZMF9XOeYH5YBKzj2P3kHv3IVItBh7R8Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Buckler（小型円盾）","description":"取り回しがよく、剣の使用を阻害しにくい小型の円盾です。\n\nSketchfabで3Dデータの閲覧ができます。\n\nポリゴン数 △680\nテクスチャ 2048*2048 3枚\n\nUnityパッケージを同梱しているので、直ぐに使い始めることができます\n\n※2枚目の使用例画像で併用したモデル\n剣：当工房製　Short Sword\nhttps://garden-of-ashen.booth.pm/items/1005619\n\nモデル：シンヤの模造武具 様 ブレイダーちゃん \nhttps://booth.pm/ja/items/954766","url":"https://booth.pm/ja/items/967079","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/967079/38f9d4f4-fcb5-4acb-acdb-2590c6e457c3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3Z6GlgRjB4w2H7iZB8dIU7kPYhbIPFN7+V1yl5ssJfA="></script>
+    nonce="EP7ERzc694+ZMF9XOeYH5YBKzj2P3kHv3IVItBh7R8Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/967079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/967079/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
