updated at: 2023-04-25 20:48, 魔法の本 - ニッケルちゃんマート - BOOTH

--- a/VRChat/23/965623.html
+++ b/VRChat/23/965623.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pDcDMcaozQiqkdZT4wnTjNG+Q/eYj9mfA1VSVwvc7uY="></script>
+    "68rKu+cZ3cQL7UPkyhOp/ZV5kKSAvKU2w3I/JWDoF5A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔法の本","description":"VRChatでの使用を主な目的とした3Dモデルです。\nVRChatワールドへの設置を前提としたパッケージ構成になっておりますが、特に使用に関する制限はございません。\nテクスチャも含め改変は自由ですが、再配布・二次配布・転売はおやめください。\n\n【内容物】\n本体\n△304ポリゴン、テクスチャ3枚（アルベド・メタリック・ノーマル）\nハートメッシュ\n△72ポリゴン\n\n【更新履歴】\n180818　ハートがくるくる回るように。配置の向きを選ばなくなりました。","url":"https://booth.pm/ja/items/965623","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/33f35c4a-fc58-4353-abe5-4faca5e412cb/i/965623/3b9c4e3e-a558-4f0e-93e7-0300bb5637a5_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pDcDMcaozQiqkdZT4wnTjNG+Q/eYj9mfA1VSVwvc7uY="></script>
+    nonce="68rKu+cZ3cQL7UPkyhOp/ZV5kKSAvKU2w3I/JWDoF5A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/965623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/965623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
