updated at: 2023-04-25 20:48, カブトムシ - Vignettia Works(B-Rabbits Factory) - BOOTH

--- a/VRChat/23/962723.html
+++ b/VRChat/23/962723.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "r9IYQT3sGxJ/Qw+gtgWhlQzk1aaWcldcBVBumrfpiOA="></script>
+    "T162b1LP2kZ6Kn8wckFwmNAbC9TwZ4a9dRCQiKwPCpI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カブトムシ","description":"■モデル概要\nカブトムシのポリゴンモデルです。\n\nキャラに付けたり、大量にしてみたり、\nふと気が付くとそこにカブトムシ…。\n\nご自由にお使いいただければと思います。\n\nボーンは入っていません。\nカブトムシ下面はポリゴン削減のため極力簡略化しています。\n\n■同梱データ\n・FBX\n・画像データ(PSD、PNG)\n\n■データ詳細\nポリゴン数 555\n\n■利用規約について\n・未改変、未改造、での再配布は禁止。\n\n・営利目的での使用可能。\n\n■免責事項 \n・本データの利用において、何らかのトラブル、\n　損失が生じたとしても当方は一切の責任を負いません。\n\n・利用規約についての内容は予告なく変更する場合があります。\n\n■モデルサンプル(ニコニ立体)\n　このカブトムシのモデルはカナというキャラクターで\n　帽子の後ろに付いているのと同じ物です。\n\n　よろしければご覧ください。\n　http://3d.nicovideo.jp/works/td39076\n\n■バージョン履歴\n2018/08/12-1.0","url":"https://booth.pm/ja/items/962723","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ddadc202-dbe9-4f85-83b4-97cd420b1442/i/962723/440c9a0b-c808-4fca-a15c-30c3f41d8531_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="r9IYQT3sGxJ/Qw+gtgWhlQzk1aaWcldcBVBumrfpiOA="></script>
+    nonce="T162b1LP2kZ6Kn8wckFwmNAbC9TwZ4a9dRCQiKwPCpI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,10 +162,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/962723/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              95
+                              96
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/962723/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              95
+                              96
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
