updated at: 2023-04-25 20:49, 【VRChat向け】水風船　944ポリゴン - 二分の三製作所 - BOOTH

--- a/VRChat/00/961300.html
+++ b/VRChat/00/961300.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ohoZ3sQp17weaeGJkNB+86afdP0vIoOvD05uEY/IFEk="></script>
+    "19iR5d2ba/9xHqafDZ89d9/GBEEbHxfeHvzM+YUkjnk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】水風船　944ポリゴン","description":"VRChat内での利用を想定した水風船の3Dモデルです。ご自由にご利用下さい。\n\nポリゴン数944\n.fbxのモデルデータ、デフォルトのテクスチャ、改変用のUVテクスチャが入っています。\n\nボーンが入っているため、ダイナミックボーンなどで揺らすことができます。\n\n無料配布とお金を払いたい方向けの2種類がありますが、内容に違いはありません。\n\nその他質問や確認は製作者Twitter（＠Sesqui_VR）までご連絡ください。","url":"https://booth.pm/ja/items/961300","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64582e23-a174-480f-b05b-2d9908644c7b/i/961300/70e5b761-ee0e-4e34-9dc3-cd2fcbb75d93_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ohoZ3sQp17weaeGJkNB+86afdP0vIoOvD05uEY/IFEk="></script>
+    nonce="19iR5d2ba/9xHqafDZ89d9/GBEEbHxfeHvzM+YUkjnk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/961300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/961300/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
